fixed hrefs and intro

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -565,7 +565,7 @@ p {
 
 #about .div-img-bg {
   padding-bottom: 30px;
-  border: 20px solid #3b7a57;
+  border: 20px solid #405085;
 }
 
 #about .div-img-bg .about-img img {
